# Flexwage

./: Cargo.toml  README.md  dfx.json  fix-auth.sh  fix-login.sh  package-lock.json  package.json
app/: globals.css  page.tsx
components/: auth-debug.tsx  did-profile.tsx  notification-system.tsx  onboarding-flow.tsx  shift-management.tsx
flexwage/: package-lock.json  package.json
flexwage/app/admin/: page.tsx
flexwage/app/dashboard/: page.tsx
flexwage/app/login/: page.tsx
flexwage/app/signup/: page.tsx
flexwage/components/: admin-dashboard.tsx  approval-card.tsx  dashboard-header.tsx  post-shift-dialog.tsx  shift-card.tsx  worker-dashboard.tsx
flexwage/lib/: actions.ts  data.ts
lib/: icp.ts  ii-proxy.ts
src/declarations/flexwage_backend/: flexwage_backend.did.d.ts  flexwage_backend.did.js  index.d.ts  index.js
src/flexwage_backend/: Cargo.toml  flexwage_backend.did
src/flexwage_backend/src/: lib.rs
